# Python_cours2

./: Dockerfile  LICENSE  Makefile  README.md  config.py  conftest.py  consumer.py  docker-compose.yaml  homeWork_with_otp.py  local_files.py  main.py  models.py  my_dream.txt  publisher.py  pyproject.toml  redis_subscriber.py  redis_work.py  untills.py  work_with_s3.py
.github/workflows/: test-with-poetry.yaml  test_study.yaml
tests/: test_book.py  test_book_list.py  test_library.py
