[project]
name = "python-cours2"
version = "3.11"
description = "my project"
authors = [
    {name = "MIT"}
]
license = {text = "3.11"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "qrcode (>=8.0,<9.0)",
    "boto3 (>=1.37.38,<2.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
